gccida/g1/reg_number
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reg_number/src/dwarf2out.c:8079:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 7617, "reg_number"); 
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reg_number/src/obj/dwarf2out.o] Error 1
